Fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -887,6 +887,14 @@ body {
 
 
 
+/*Horizontal Scrolling prevention */
+html, body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
+
+
 
 
 /* Alert for Add to Cart */
